syntax = "proto3";

option go_package="pkg/service/proto";

message Account {
    string id = 1;
    string name = 2;
    string avatar_url = 3;
}

message CreateAccountRequest {
    string name = 1;
    string avatar_url = 3;
}

message CreateAccountResponse {
    string token = 1;
    Account account = 2;
}

message FindUser {
    string id = 1;
}

service AccountService {
    rpc CreateAccount(CreateAccountRequest) returns (CreateAccountResponse) {}
    rpc Find(FindUser) returns (Account) {}
}