syntax = "proto3";

option go_package="pkg/service/proto";

import "proto/account.proto";
import "google/protobuf/timestamp.proto";


message Message {
    string id = 1;
    string text = 2;
    Account author = 3;
    google.protobuf.Timestamp timestamp = 4;
}

message CreateMessageRequest {
    string room_id = 1;
    string text = 2;
}

message ObserveMessageRequest {
    string room_id = 1;
}

message FindAllMessagesRequest {
    string room_id = 1;
}

message MessagesResponse {
    repeated Message messages = 1;
}

service MessageService {

    rpc CreateMessage(CreateMessageRequest) returns(Message) {}

    rpc ObserveMessages(ObserveMessageRequest) returns(stream Message) {}

    rpc FindAllMessages(FindAllMessagesRequest) returns(MessagesResponse) {}

}