syntax = "proto3";

option go_package="pkg/service/proto";

import "proto/account.proto";
import "google/protobuf/empty.proto";

message Room {
    string id = 1;
    string name = 2;
    string owner_id = 3;
}

message CreateRoomRequest {
    string name = 1;
}

message FindRoomRequest {
    string id = 1;
}

message FindRoomMembersResponse {
    repeated Account account = 1;
}

message JoinRoomRequest {
    string id = 1;
}

message FindJoinedRoomsRequest {
    string account_id = 1;
}

message FindJoinedRoomsResponse {
    repeated Room room = 1;
}

message FindOwnedRoomsResponse {
    repeated Room room = 1;
}

message FindAllRoomsResponse {
    repeated Room room = 1;
}

service RoomService {

    rpc Create(CreateRoomRequest) returns (Room) {}

    rpc Find(FindRoomRequest) returns(Room) {}

    rpc FindRoomMembers(FindRoomRequest) returns(FindRoomMembersResponse) {}

    rpc JoinRoom(JoinRoomRequest) returns(Room) {}

    rpc FindJoinedRooms(FindJoinedRoomsRequest) returns(FindJoinedRoomsResponse) {}

    rpc FindOwnedRooms(google.protobuf.Empty)  returns(FindOwnedRoomsResponse) {}

    rpc FindAllRooms(google.protobuf.Empty) returns(FindAllRoomsResponse) {}
}